update security file